--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -2,8 +2,12 @@
     margin-right: 70px;
 }
 
-.logo__title {
+.logo__title-white {
     color: #ffffff;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
 }
 
 .logo__title--accent {}
