--- a/sass/components/_logo-page.scss
+++ b/sass/components/_logo-page.scss
@@ -2,7 +2,7 @@
     @extend %resetTextStyles;
 }
 
-.logo__title {
+.logo__title-black {
     color: #000000;
     font-family: Raleway, sans-serif;
     font-weight: 700;
