--- a/css/portfolio-page.css
+++ b/css/portfolio-page.css
@@ -339,6 +339,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+header {
   border-bottom: 1px solid #ECECEC;
 }
 
