--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -34,6 +34,8 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
+    background-color: #FFFFFF;
+
     &:nth-child(4n) {
         margin-right: 0;
     }
